--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,6 +19,9 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // injector
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
+@import 'fsg/fsg.scss';
 @import 'main/main.scss';
+@import 'portfolio/portfolio.scss';
+@import 'resume/resume.scss';
 @import 'modal/modal.scss';
 // endinjector
