--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -60,7 +60,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url('/assets/images/hero_background.png');
+    background-image: url('/assets/images/stars_background.png');
     opacity: .33;
 }
 
@@ -72,6 +72,16 @@
     min-height: 100px;
     display: table;
     margin: 50px auto;
+}
+
+.ng-dirty.ng-invalid {
+    color: red;
+}
+
+.dropdown-menu {
+    max-height: 150px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .footer {
