added some changes to the form, instead of using a dropdown for states, we use a form with autocomplete. Also changed the layout of the form. Lastly, changed teh way the spinner worked. Instead of taking up the whole page, it only affects the data column (so theoretically, a user could still use the form if it was taking forever to load).

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -74,6 +74,18 @@
     margin: 50px auto;
 }
 
+.form-container {
+    margin: 10px 0;
+}
+
+input {
+    margin:5px 0;
+}
+
+.no-padding-left {
+    padding-left: 0;
+}
+
 .ng-dirty.ng-invalid {
     color: red;
 }
